# aries-acapy-plugin-did-management

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
didmanagement/: __init__.py  did_manager.py  didweb_manager.py  route_registration.py  verification_methods.py
didmanagement/retention/: __init__.py
didmanagement/routes/: __init__.py  get_diddoc.py  mark_did_public.py  openapi_config.py  rotate_key.py  schemas.py
didweb/: __init__.py  didweb_manager.py  route_registration.py  verification_methods.py
didweb/retention/: __init__.py  previous_key.py  recall_strategy.py  storage_strategy.py
didweb/routes/: __init__.py  get_diddoc.py  mark_did_public.py  openapi_config.py  register_route.py  rotate_key.py  schemas.py
tests/: conftest.py  test_did_manager.py  test_didweb_manager.py
tests/retention/: test_recall_strategy.py  test_storage_strategy.py
