[tool.poetry]
name = "aries-acapy-did-management"
version = "0.1.0"
description = ""
authors = ["Clément Humbert <clement.humbert@sicpa.com>"]
readme = "README.md"
packages = [{include = "didmanagement"}]

[tool.poetry.dependencies]
python = "^3.9"
pydid = "^0.3"
aries-cloudagent = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
coverage = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
